Fix scrollbar in UserList in BattleList.

--- a/style/BattleList.sass
+++ b/style/BattleList.sass
@@ -48,7 +48,8 @@
 			font-size: 0.9em
 			margin-left: -0.8em
 			margin-right: -0.8em
-			max-height: 47%
+			ul
+				max-height: 39em
 		button
 			margin: 0.8em auto 0 auto
 			display: block
